# lanyarrs

./: .gitignore  Cargo.toml  build.rs  compose.yaml
src/: config.rs  main.rs  storage.rs
src/api/: mod.rs  router.rs  types.rs  utils.rs
src/api/middlewares/: mod.rs  request_id.rs
src/api/routes/: mod.rs  socket.rs  user.rs
src/discord/: client.rs  gateway.rs  mod.rs  types.rs
